# project-origin

./: .gitignore  ARCHITECTURAL_COHERENCE_AUDIT_2026_06_11.md  ARCHITECTURAL_COHERENCE_AUDIT_2026_06_12.md  ARCHITECTURAL_COHERENCE_AUDIT_PHASE4_EXECUTION.md  ARCHITECTURAL_COHERENCE_AUDIT_PHASE5_EXECUTION.md  GEMINI.md  MASTER_COMPILATION.md  MASTER_COMPILATION_ADDITIONS.md  MGCF_ARCHIVE.md  MOBILE_DEPLOYMENT.md  NATIVE_AI_SYSTEM.md  ORIGIN_AI.md  ORIGIN_AI_IMMUNE_SYSTEM.md  ORIGIN_ARCHITECTURE.md  ORIGIN_CIPHER_PERFECTION.md  ORIGIN_COMM_PERFECTION.md  ORIGIN_MONETIZATION_MODEL.md  ORIGIN_TENSEGRITY_RESOLUTION.md  ORIGIN_UNIVERSAL_BINARY.md  ROADMAP.md  handoff.md  origin-release-key.keystore  origin_ai_immune_poc.py  origin_chaos_cipher_poc.py  origin_cipher_poc.py  origin_comm_poc.py  origin_dca_poc.py  origin_hdc_immune_poc.py
origin_core/: Cargo.toml  ORIGINAL_REQUEST.md  PROJECT.md  TEST_INFRA.md  TEST_READY.md  test.rs  test_sys.rs
origin_core/src/: active_inference.rs  autocatalytic_raf.rs  baryogenesis.rs  biosphere.rs  bose_einstein_condensate.rs  calabi_yau.rs  casimir_effect.rs  category_theory.rs  causal_inference.rs  cherenkov.rs  cipher.rs  cntp.rs  complexity_sync.rs  compressed_sensing.rs  constructal_routing.rs  cosmos.rs  crispr.rs  curvature.rs  daemon.rs  dirac_antimatter.rs  epigenetics.rs  federated_smpc_ai.rs  fermion.rs  hawking_radiation.rs  hologram.rs  horizontal_gene_transfer.rs  immune.rs  immune_nsa.rs  information_bottleneck.rs  kuramoto.rs  lib.rs  load_generator.py  logos.rs  m_theory.rs  main.py  main.rs  mean_field_games.rs  (+46 more)
(+197 files in other folders)
